🐛  Fix text-align for pixel perfect design

--- a/src/Components/Charts/ChartScorePie/ChartScorePie.scss
+++ b/src/Components/Charts/ChartScorePie/ChartScorePie.scss
@@ -13,6 +13,7 @@
 			justify-content: center;
 			left: 6.5rem;
 			position: absolute;
+			text-align: center;
 			top: 4.5rem;
 			&__percent {
 				font-size: 26px;
